fixing navigation small mobile responsiveness

--- a/css/index.css
+++ b/css/index.css
@@ -153,6 +153,12 @@ div.header header {
   align-items: stretch;
   align-content: stretch;
 }
+@media (max-width: 450px) {
+  div.header header {
+    flex-direction: column;
+    margin: 0 auto;
+  }
+}
 @media (min-width: 501px) {
   div.header header {
     width: 88%;
@@ -161,6 +167,11 @@ div.header header {
 }
 div.header header .logo {
   padding: 1rem 1rem;
+}
+@media (max-width: 450px) {
+  div.header header .logo {
+    text-align: center;
+  }
 }
 @media (min-width: 501px) {
   div.header header .logo {
@@ -185,6 +196,13 @@ div.header header nav {
   align-items: stretch;
   padding-right: 1em;
   width: 65%;
+}
+@media (max-width: 450px) {
+  div.header header nav {
+    width: 95%;
+    justify-content: space-evenly;
+    padding: 0 0 1rem;
+  }
 }
 @media (min-width: 501px) {
   div.header header nav {
@@ -427,8 +445,18 @@ div.header header nav a:last-child:hover {
   margin: 0 auto;
   align-self: center;
 }
+@media (min-width: 501px) {
+  .findLocation .findContainer div {
+    width: 49%;
+  }
+}
 .findLocation .findContainer div img {
   width: 100%;
+}
+@media (min-width: 501px) {
+  .findLocation .findContainer div img {
+    width: 85%;
+  }
 }
 .findLocation .findContainer div .priceBox {
   position: relative;
@@ -855,7 +883,7 @@ footer .footerContainer .copyright a {
 }
 .container-bottom .teampics .bubbles h2:hover {
   text-decoration: underline;
-  text-decoration-color: #1089ff;
+  color: #1089ff;
 }
 .container-bottom .teampics .bubbles p {
   font-size: 1.4rem;
@@ -865,5 +893,5 @@ footer .footerContainer .copyright a {
 }
 .container-bottom .teampics .bubbles p:hover {
   text-decoration: underline;
-  text-decoration-color: #1089ff;
+  color: #1089ff;
 }
